# 20231219-llmapp-meetup

./: .gitignore  Readme.md  pyproject.toml
app/agents/: __init__.py  base.py  openai_assistant.py
app/appcsv/: __init__.py
result/: result.csv  result_detail.csv
