[tool.poetry]
name = "20231219-llmapp-meetup"
version = "0.1.0"
description = ""
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.5.0"
llama-index = "^0.9.15.post2"
jupyterlab = "^4.0.9"
unstructured = {extras = ["local-inference"], version = "^0.11.5"}
notebook = "^7.0.6"
langchain = "^0.0.350"
sentence-transformers = "^2.2.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
